[project]
name = "03-streamlit-excel-femsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.10.0",
    "django>=5.1.5",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "ruff>=0.9.2",
    "streamlit>=1.41.1",
    "streamlit-option-menu>=0.4.0",
]
